doc: Javadoc added (incomplete).
